fix biocard overflow

--- a/_sass/digitalhealthhumanities-toolkit-theme.scss
+++ b/_sass/digitalhealthhumanities-toolkit-theme.scss
@@ -141,6 +141,10 @@ a {
 
 }
 
+.bio {
+    overflow: auto
+}
+
 .bio-text {
     max-height: 100%;
     overflow-y: scroll;
